# lessmore

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.update.sh  .secrets.baseline_update.sh  CONTRIBUTING.md  README.md  git_secret_readme.md  pyproject.toml  setup.sh  setup_monorepo.sh  test_git_lfs.txt  test_git_secret.secret  test_git_secret.txt.secret
source/python/docs-and-tutorials/langchain-playground/: pyproject.toml
source/python/environments/local_pythons/python310/: pyproject.toml
source/python/libs/lessmore.common_imports/: pyproject.toml
source/python/libs/lessmore.common_imports/lessmore/common_imports/: common_imports.py
source/python/libs/lessmore.utils/: .bumpversion.toml  pyproject.toml
source/python/libs/lessmore.utils/lessmore/: README.md  test_imports.py
source/python/libs/lessmore.utils/lessmore.utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/python/libs/lessmore.utils/lessmore/archive/: argon2_hasher.py  bcrypt_hasher.py  flatten_nested.py  get_kubernetes_container_memory_usage.py  mutate_dictionary.py  notion_client.py  recursive_default_dictionary.py
source/python/libs/lessmore.utils/lessmore/utils/: async_retry.py  better_print.py  cache_on_disk.py  code_block.py  enriched_notion_client.py  execute_system_command.py  get_complex_attribute.py  get_nested_attr.py  get_repo_path.py  grpc_asyncio_client.py  grpc_client.py  lazy_dataclass.py  list_files.py  log_io.py  open_file_in_os.py  open_in_os.py  print_json.py  printy.py  rate_limiter.py  recursive_apply.py  remove_duplicates_ordered.py  resolve_placeholders.py  round_datetime.py  run_cached.py  run_inline_snapshot_tests.py  run_system_command.py  skip_duplicates.py  slugify.py  stop_watch.py  tested.py  track.py
source/python/libs/lessmore.utils/scripts/: bump_major.sh  bump_minor.sh
source/python/libs/teletalk/: .bumpversion.toml  pyproject.toml  setup_local_environment.sh  test_imports.py
source/python/libs/teletalk/teletalk/: app.py  dispatcher.py  talk.py
source/python/libs/teletalk/teletalk/blocks/: basic_block.py  block.py  build_default_message_callback.py  default_on_response.py  handle_errors.py  mark_text_with_inline_response.py  menu.py  simple_block.py
source/python/libs/teletalk/teletalk/examples/: chain.py  custom_messages.py  external_update.py  keyboards.py  menu.py  modes.py  on_response.py  parallel.py  purge_talk.py  simple_menu_bot.py  starters.py  state.py  sub_block.py
source/python/libs/teletalk/teletalk/models/: base_block.py  block.py  block_message.py  callback_info.py  page.py  response.py
source/python/libs/teletalk/teletalk/test_deps/: test_deps.py
source/python/libs/teletalk/teletalk/utils/: generate_id.py
source/python/samples/archive/celery-tasks/: pyproject.toml  requirements.txt
source/python/samples/archive/celery-tasks/kubernetes/: worker-deployment.yaml
source/python/samples/archive/celery-tasks/scripts/: run_flower.sh
source/python/services/archive/2023.01 telegram-poweruser/: pyproject.toml
source/python/services/archive/2023.01 telegram-poweruser/runners/: run_all.sh
source/python/services/archive/2024-06 family-fund/: README.md  pyproject.toml  token.json.secret
source/python/services/archive/2024-06 family-fund/credentials/: client_secret.json.secret  service_account_secret.json.secret  token.json.secret
source/python/services/archive/2024-06 family-fund/family_fund/: __init__.py  config.yaml.secret  exchange.py  google_spreadsheet.py  token.json.secret  update.py  utils.py
source/python/services/archive/2024-06 family-fund/runners/: token.json.secret  update_fund.py
source/python/services/archive/2024-06 release-lessmore-service-example/: pyproject.toml  release.py  release.sh  test_lessmore_utils.py
source/python/services/discord-to-telegram-forwarder/: .bumpversion.toml  README.md  configure_prod.sh  configure_test.sh  pyproject.toml  requirements.txt  run.sh  run_prod.sh  run_prod_detached.sh  run_test.sh  run_test_detached.sh  setup.py  test_imports.py  update_requirements.sh
source/python/services/discord-to-telegram-forwarder/archive/: requirements.txt  requirements.txt.update.sh
source/python/services/discord-to-telegram-forwarder/deploy/: install_environment.sh
source/python/services/discord-to-telegram-forwarder/discord_to_telegram_forwarder/: config.py  deps.py  discord_to_telegram_forwarder.py  emoticons.txt  listen_to_discord.py  main.py  on_message_discord_client.py  processor_client.py  run.py  telegram_client.py  update_comments_counter.py
source/python/services/discord-to-telegram-forwarder/docker/: Dockerfile  build_and_push.sh  build_and_run.sh  run_prod.sh  run_test.sh
source/python/services/discord-to-telegram-forwarder/scripts/: bump_patch.sh
source/python/services/ef-bots/: pyproject.toml  setup_local_environment.sh  test_imports.py
source/python/services/ef-bots/ef_bots/: run_prod.sh
source/python/services/monorepo-tooling/: pyproject.toml  requirements.txt
source/python/services/monorepo-tooling/monorepo_tooling/: export_config_envs.py  setup_poetry_environments.py
source/python/services/palette/: pyproject.toml
source/python/services/palette/palette/: deps.py
source/python/services/playground/: pyproject.toml  setup_local_environment.sh
source/python/services/playground/cursor-playground/: main.py
source/python/services/playground/deeplay-invoices/: .gitignore  generate_act.py  generate_act_template.docx
source/python/services/playground/langchain-playground/: pyproject.toml
source/python/services/playground/mkbsd/: main.py
source/python/services/playground/prefect-playground/: sample.py
source/python/services/playground/tutorials/: rocksdict_basic_usage.py
source/python/services/second-sun/: pyproject.toml  requirements.txt.update.sh
source/python/services/second-sun/second_sun/: custom_yeelight_bulb.py  get_optimal_brightness.py  interpolate_on_time.py  main.py  set_brightness.py  set_brightness_for_all_bulbs.py  set_global_brightness.py  yeelight_playground.py
(+1071 files in other folders)
