[tool.poetry]
name = "langchain-playground"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
langchain = "^0.1.20"
langchain-openai = "^0.1.7"
openai = "^1.30.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
