[tool.poetry]
name = "lessmore.utils"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]
packages = [
    { include = "deeplay" },
]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.0"
loguru = "^0.7.0"
numpy = "^1.26.1"
pandas = "^1.0"
protobuf = "^3.0"
python-box = {extras = ["ruamel.yaml", "toml", "msgpack"], version = "^6.0.2"}
fire = "^0.4.0"
sortedcontainers = "^2.4.0"
ujson = "^5.5.0"
pendulum = "^3.0.0"
PyYAML = "^6.0"
argon2-cffi = "^21.3.0"
bcrypt = "^4.0.1"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
notion-client = "^2.0.0"
more-itertools = "^9.1.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
