[project]
name = "teletalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain >=0.2,<0.3",
    "langchain-openai >=0.1.7,<0.2",
    "openai >=1.30.1,<2",
    "pydantic-settings >=2.2.1,<3",
    "loguru >=0.7.2,<0.8",
    "pendulum >=3.0.0,<4",
    "beautifulsoup4 >=4.12.3,<5",
    "faiss-cpu >=1.8.0,<2",
    "langgraph >=0.0.55,<0.1",
    "keyboard >=0.13.5,<0.14",
    "pynput >=1.7.7,<2",
    "python-benedict[all] >=0.33.2,<0.34",
    "yadisk >=2.1.0,<3",
    "pytest >=8.2.2,<9",
    "memray >=1.12.0,<2",
    "toml >=0.10.2,<0.11",
    "fire >=0.6.0,<0.7",
    "anyconfig[dotenv] >=0.14.0,<0.15",
    "telethon >=1.36.0,<2",
    "nltk >=3.8.1,<4",
    "spacy >=3.7.5,<4",
    "diskcache >=5.6.3,<6",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "pytube >=15.0.0,<16",
    "pydub >=0.25.1,<0.26",
    "google-api-python-client>=2.136.0,<3",
    "pillow >=10.4.0,<11",
    "imgurpython >=1.1.7,<2",
    "aiobotocore >=2.13.1,<3",
    "aioboto3 >=13.1.0,<14",
    "inline-snapshot ==0.8.0",
    "prefect >=2.19.8,<3",
    "pandas >=2.2.2,<3",
    "notion-client >=2.2.1,<3",
    "pycallgraph2 >=1.1.3,<2",
    "pyan3 >=1.2.0,<2",
    "code2flow >=2.5.1,<3",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "aiogram>=3",
    "python-telegram-bot>=21.5",
    "pymaybe>=0.1.6",
    "better-exceptions>=0.3.3",
]
