[project]
name = "teletalk"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru >=0.7.2",
    "aiogram>=3",
    "pymaybe>=0.1.6",
    "rocksdict>=0.3.23",
    "coolname>=2.2.0",
    "shortuuid>=1.0.13",
    "python-box>=7.2.0",
    "more-itertools>=10.5.0",
    "pydantic-settings>=2.5.2",
    "lessmore-utils @ git+https://github.com/engineering-friends/lessmore.git#subdirectory=source/python/libs/lessmore.utils"
]
