[project]
name = "discord-telegram-forwarder"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = "==3.12.4"
authors = [
    {name = "marklidenberg", email = "marklidenberg@gmail.com"}
]
dependencies = [
    "aiohttp == 3.9.3",
    "cachetools == 5.2.0",
    "loguru == 0.6.0",
    "environs == 9.5.0",
    "python-dateutil == 2.8.2",
    "path == 16.4.0",
    "tqdm == 4.64.0",
    "sortedcontainers == 2.4.0",
    "python-telegram-bot >=20.0a4,<21",
    "Telethon == 1.35.0",
    "fire == 0.4.0",
    "anyconfig == 0.13.0",
    "requests == 2.28.1",
    "retry == 0.9.2",
    "pyperclip == 1.8.2",
    "more-itertools == 9.0.0",
    "discord.py == 2.3.1",
    "pytest == 7.4.0",
    "pyyaml == 6.0.1",
    "pymaybe == 0.1.6",
    "better-exceptions == 0.3.3",
    "emoji == 2.8.0",
    "python-box == 7.1.1",
    "pendulum == 3.0.0",
    "jupyter == 1.0.0",
    "pydantic == 2.6.4",
    "pydantic-settings >=2.2.1,<3",
    "opencv-python >=4.9.0.80,<5",
    "pillow >=10.3.0,<11",
    "matplotlib >=3.8.4,<4",
    "pandas >=2.2.2,<3",
    "diskcache >=5.6.3,<6",
    "openai >=1.28.2,<2",
    "keyring >=25.2.1,<26",
    "notion-client >=2.2.1,<3",
    "inline-snapshot ==0.8.0",
]