[project]
name = "discord-to-telegram-forwarder"
version = "0.1.3"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "marklidenberg", email = "marklidenberg@gmail.com"}
]
dependencies = [
    "aiohttp >=3.9",
    "cachetools >=5.2",
    "loguru >=0.6",
    "environs >=9.5",
    "python-dateutil >=2.8",
    "path >=16.4",
    "tqdm >=4.64",
    "sortedcontainers >=2.4",
    "python-telegram-bot >=20.0a4",
    "Telethon >=1.35",
    "fire >=0.4",
    "anyconfig >=0.13",
    "requests >=2.28",
    "retry >=0.9",
    "pyperclip >=1.8",
    "more-itertools >=9.0",
    "discord.py >=2.3",
    "pytest >=7.4",
    "pyyaml >=6.0",
    "pymaybe >=0.1.6",
    "better-exceptions >=0.3.3",
    "emoji >=2.8",
    "python-box >=6.0.2",
    "pendulum >=3.0",
    "jupyter >=1.0",
    "pydantic >=2.6",
    "pydantic-settings >=2.2.1",
    "pillow >=10.3.0",
    "diskcache >=5.6.3",
    "openai >=1.28.2",
    "keyring >=25.2.1",
    "notion-client >=2.2.1",
    "inline-snapshot ==0.8.0",
]