[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
    "pydantic-settings >=2.2.1,<3",
    "loguru >=0.7.2,<0.8",
    "fire >=0.6.0,<0.7",
    "telethon >=1.36.0,<2",
    "diskcache >=5.6.3,<6",
    "inline-snapshot ==0.8.0",
    "notion-client >=2.2.1,<3",
    "aiogram>=3",
    "pymaybe>=0.1.6",
    "python-box>=7.2.0",
    "lessmore-utils @ git+https://github.com/engineering-friends/lessmore.git#subdirectory=source/python/libs/lessmore.utils"
    "teletalk @ git+https://github.com/engineering-friends/lessmore.git#subdirectory=source/python/libs/teletalk"
]
