[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
langchain = "^0.2"
langchain-openai = "^0.1.7"
openai = "^1.30.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
pendulum = "^3.0.0"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"
langgraph = "^0.0.55"
keyboard = "^0.13.5"
pynput = "^1.7.7"
python-benedict = {extras = ["all"], version = "^0.33.2"}
yadisk = "^2.1.0"
pytest = "^8.2.2"
memray = "^1.12.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
