[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
langchain = "^0.2"
langchain-openai = "^0.1.7"
openai = "^1.30.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
pendulum = "^3.0.0"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"
langgraph = "^0.0.55"
keyboard = "^0.13.5"
pynput = "^1.7.7"
python-benedict = {extras = ["all"], version = "^0.33.2"}
yadisk = "^2.1.0"
pytest = "^8.2.2"
memray = "^1.12.0"
toml = "^0.10.2"
fire = "^0.6.0"
anyconfig = {extras = ["dotenv"], version = "^0.14.0"}
telethon = "^1.36.0"
nltk = "^3.8.1"
spacy = "^3.7.5"
diskcache = "^5.6.3"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
pytube = "^15.0.0"
pydub = "^0.25.1"
google-api-python-client = "^2.136.0"
pillow = "^10.4.0"
imgurpython = "^1.1.7"
aiofiles = "^24.1.0"
aiobotocore = "^2.13.1"
aioboto3 = "^13.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
