[tool.poetry]
name = "second-sun"
version = "0.1.1"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.*"
python-miio = "^0.5.12"
pydantic = "1.9.2"
loguru = "0.6.0"
pendulum = "^3.0.0"
inline-snapshot = "^0.7.0"
pytest = "^8.1.1"
astral = "^3.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
yeelight = "^0.7.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
