[tool.poetry]
name = "python3.10"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cachetools = ">=4.0.0"
loguru = "^0.6.0"
environs = "^9.5.0"
notion-client = "^1.0.0"
bidict = "^0.22.0"
python-dateutil = "^2.8.2"
pandas = "^1.4.3"
path = "^16.4.0"
tqdm = "^4.64.0"
pydantic = "^1.9.2"
pendulum = "^2.1.2"
better-exceptions = "^0.3.3"
jupyter = "^1.0.0"
sortedcontainers = "^2.4.0"
python-box = {extras = ["ruamel.yaml", "toml", "msgpack"], version = "^6.0.2"}
uvicorn = {extras = ["standard"], version = "^0.23.0"}
starlette = "0.27.0"
chardet = "^5.0.0"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
python-telegram-bot = {version = "20.0a4", allow-prereleases = true}
Telethon = "1.24.0"
fire = "^0.4.0"
anyconfig = "^0.13.0"
clickhouse-driver = "^0.2.4"
requests = "^2.28.1"
protobuf = "3.20.1"
ujson = "^5.5.0"
PyYAML = "^6.0"
pyinstrument = "^4.3.0"
pyrobuf = "^0.9.3"
apache-airflow = "^2.4.0"
O365 = "^2.0.21"
dacite = "^1.6.0"
pyarrow = "^9.0.0"
yadisk = "^1.2.16"
retry = "^0.9.2"
celery = "^5.2.7"
flower = "^1.2.0"
redis = "^4.3.4"
prodict = "^0.8.18"
minio = "^7.1.12"
kubernetes = "^24.2.0"
exceptiongroup = "^1.0.0-rc.9"
pyperclip = "^1.8.2"
bcrypt = "^4.0.1"
argon2-cffi = "^21.3.0"
EbookLib = "^0.17.1"
nltk = "^3.7"
beautifulsoup4 = "^4.11.1"
stemming = "^1.0.1"
cache-to-disk = "^2.0.0"
pycbrf = "^1.1.0"
scipy = "^1.9.2"
gspread = "^5.6.0"
google-api-python-client = "^2.64.0"
notifiers = "^1.3.3"
memray = "^1.5.0"
fabric = "^2.7.1"
portion = "^2.3.0"
fastparquet = "^2022.12.0"
pydub = "^0.25.1"
clickhouse-connect = "^0.5.3"
slack-sdk = "^3.20.0"
more-itertools = "^9.0.0"
black = "^23.1.0"
fastapi = "^0.100.0"
cryptography = "^41.0.2"
"discord.py" = "^2.3.1"
grpcio = "^1.57.0"
stackprinter = "^0.2.10"
nest-asyncio = "^1.5.7"
dill = "^0.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
