[tool.poetry]
name = "celery-tasks"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]


[tool.poetry.dependencies]
python = "3.9.*"
Flask = "2.1.2"
requests = "2.28.1"
pytest = "7.1.2"
celery = "^5.2.7"
flower = "^1.2.0"
redis = "^4.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
