[tool.poetry]
name = "telegram-poweruser"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytest = "7.1.3"
pendulum = "2.1.2"
numpy = "1.23.2"
loguru = "0.6.0"
tqdm = "4.64.1"
protobuf = "4.21.5"
python-box = "6.0.2"
path = "16.4.0"
Telethon = "1.24.0"
python-telegram-bot = {version = "20.0a4", allow-prereleases = true}
"lessmore.notion_client" = {path = "../../../../source/python/libs/lessmore.notion_client", develop = true}
"lessmore.telegram_client" = {path = "../../../../source/python/libs/lessmore.telegram_client", develop = true}
pandas = "1.4.4"
better-exceptions = "0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
