[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "release-lessmore-service-example"
version = "0.1.1"
description = ""
authors = [ "marklidenberg <marklidenberg@gmail.com>",]

[tool.poetry.dependencies]
python = "3.12.3"

"lessmore.utils" = {git = "https://github.com/engineering-friends/lessmore.git", rev = "25111e2fd667612302f4b62bdd79d86765931f8f", subdirectory = "source/python/libs/lessmore.utils"}
