[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "release-lessmore-service-example"
version = "0.1.15"
description = ""
authors = [ "marklidenberg <marklidenberg@gmail.com>",]

[tool.poetry.dependencies]
python = "3.12.3"

"lessmore.utils" = {git = "https://github.com/engineering-friends/lessmore.git", rev = "c569fb86ae23ac058457022fed29e44fa408712d", subdirectory = "source/python/libs/lessmore.utils"} # commited_at: "2024-06-16 15:28:15"
